# qagent

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-space.yml  lint.yml  tests.yml
benchmarks/qagent_mini/: README.md  dataset.json
docs/: benchmarks.md  deploy.md  qaoa-explained.md
qagent/: __init__.py  selector.py
qagent/oracle/: __init__.py  bruteforce.py  greedy.py
qagent/qaoa/: __init__.py  circuit.py  encoding.py  xy_mixer.py
qagent/utils/: __init__.py  config.py
scripts/: _gen_qagent_mini.py  precompute_results.py  run_benchmarks.py
space/: Dockerfile  README.md  app.py  requirements.txt  safety.py
space/assets/: styles.css
space/precomputed/: benchmark_results.json
tests/: conftest.py  test_oracle_bruteforce.py  test_qaoa_circuit.py  test_selector_smoke.py  test_space_app.py
