[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qagent"
version = "0.2.0"
description = "QAOA-based tool selection for LLM agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Serghei Brinza", email = "contact@example.com" },
]
keywords = [
    "quantum-computing",
    "qaoa",
    "llm",
    "agents",
    "tool-selection",
    "pennylane",
    "qiskit",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "pennylane>=0.39",
    "qiskit>=2.0",
    "torch>=2.4",
    "numpy<2.1",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[project.urls]
Homepage = "https://github.com/Quantum-Labor/qagent"
Repository = "https://github.com/Quantum-Labor/qagent"
Issues = "https://github.com/Quantum-Labor/qagent/issues"

[tool.setuptools.packages.find]
include = ["qagent*"]
exclude = ["tests*", "benchmarks*", "scripts*", "docs*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "qagent.*"
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: tests that run real QAOA optimization (seconds or more)",
    "unit: fast unit tests (includes the HF Space app smoke tests)",
]

[tool.coverage.run]
source = ["qagent"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
